# ros2_ws

./: .gitignore  test_cam.py
src/hand_gesture_recognition/: package.xml  setup.cfg  setup.py
src/hand_gesture_recognition/config/: params.yaml
src/hand_gesture_recognition/hand_gesture_recognition/: gesture_controller.py  gesture_detector.py  gesture_node.py
src/hand_gesture_recognition/launch/: hand_gesture.launch.py
src/my_camera_pkg/: package.xml  setup.py
src/my_camera_pkg/launch/: camera_launch.py
src/my_camera_pkg/my_camera_pkg/: camera_pub.py  camera_sub.py
